--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,33 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@AlfiyyatusSyadiah 
+AlfiyyatusSyadiah
+/
+DiskonKuyy.github.io
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+DiskonKuyy.github.io/assets/css/style.css
+@AlfiyyatusSyadiah
+AlfiyyatusSyadiah Update style.css
+Latest commit dab83b8 3 minutes ago
+ History
+ 2 contributors
+@AlfiyyatusSyadiah@divaariani
+1635 lines (1400 sloc)  29.9 KB
+
 /**
 * Template Name: Delicious - v4.8.0
 * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
@@ -15,7 +45,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 a:hover {
@@ -42,7 +72,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #5c2d32;
+  background: #92A8D1;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -87,7 +117,7 @@ h6 {
 }
 
 #topbar i {
-  color: #5c2d32;
+  color: #92A8D1;
   line-height: 0;
 }
 
@@ -142,7 +172,7 @@ h6 {
 # Book a table button Menu
 --------------------------------------------------------------*/
 .book-a-table-btn {
-  background: #5c2d32;
+  background: #92A8D1;
   color: #fff;
   border-radius: 50px;
   margin: 0 0 0 20px;
@@ -213,7 +243,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .navbar .dropdown ul {
@@ -250,7 +280,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .navbar .dropdown:hover>ul {
@@ -346,7 +376,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .navbar-mobile .getstarted,
@@ -381,7 +411,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -440,7 +470,7 @@ h6 {
 }
 
 #hero h2 span {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 #hero p {
@@ -520,12 +550,12 @@ h6 {
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   color: #fff;
-  border: 2px solid #5c2d32;
+  border: 2px solid #92A8D1;
 }
 
 #hero .btn-menu:hover,
 #hero .btn-book:hover {
-  background: #5c2d32;
+  background: #92A8D1;
   color: #fff;
 }
 
@@ -570,7 +600,7 @@ section {
 }
 
 .section-title h2 span {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .section-title p {
@@ -690,7 +720,7 @@ section {
 
 .about .content ul i {
   font-size: 20px;
-  color: #5c2d32;
+  color: #92A8D1;
   position: absolute;
   left: 0;
   top: 2px;
@@ -711,7 +741,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#5c2d32 50%, rgba(255, 176, 59, 0.4) 52%);
+  background: radial-gradient(#92A8D1 50%, rgba(255, 176, 59, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -759,7 +789,7 @@ section {
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #5c2d32;
+  border-left: 15px solid #92A8D1;
   transform: scale(20);
 }
 
@@ -857,7 +887,7 @@ section {
 }
 
 .why-us .box:hover {
-  background: #5c2d32;
+  background: #92A8D1;
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
 }
@@ -890,14 +920,14 @@ section {
   margin: 0 3px 10px 3px;
   transition: all ease-in-out 0.3s;
   background: #fff;
-  border: 2px solid #5c2d32;
+  border: 2px solid #92A8D1;
   border-radius: 50px;
 }
 
 .menu #menu-flters li:hover,
 .menu #menu-flters li.filter-active {
   color: #fff;
-  background: #5c2d32;
+  background: #92A8D1;
 }
 
 .menu #menu-flters li:last-child {
@@ -929,7 +959,7 @@ section {
   position: relative;
   z-index: 3;
   font-weight: 700;
-  color: #ff9b08;
+  color: #92A8D1;
 }
 
 .menu .menu-content span {
@@ -970,12 +1000,12 @@ section {
 }
 
 .specials .nav-link:hover {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .specials .nav-link.active {
-  color: #5c2d32;
-  border-color: #5c2d32;
+  color: #92A8D1;
+  border-color: #92A8D1;
 }
 
 .specials .tab-pane.active {
@@ -1006,7 +1036,7 @@ section {
 
   .specials .nav-link.active {
     color: #fff;
-    background: #5c2d32;
+    background: #92A8D1;
   }
 }
 
@@ -1055,7 +1085,7 @@ section {
 .events .event-item h3 {
   font-weight: 600;
   font-size: 26px;
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .events .event-item .price {
@@ -1066,7 +1096,7 @@ section {
 }
 
 .events .event-item .price span {
-  border-bottom: 2px solid #5c2d32;
+  border-bottom: 2px solid #92A8D1;
 }
 
 .events .event-item ul {
@@ -1081,7 +1111,7 @@ section {
 .events .event-item ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .events .event-item p:last-child {
@@ -1101,7 +1131,7 @@ section {
 }
 
 .events .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5c2d32;
+  background-color: #92A8D1;
 }
 
 /*--------------------------------------------------------------
@@ -1184,7 +1214,7 @@ section {
 }
 
 .book-a-table .php-email-form button[type=submit] {
-  background: #5c2d32;
+  background: #92A8D1;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1303,7 +1333,7 @@ section {
 }
 
 .chefs .member .social a:hover {
-  color: #5c2d32;
+  color: #92A8D1;
 }
 
 .chefs .member .social i {
@@ -1381,7 +1411,7 @@ section {
 }
 
 .testimonials .testimonial-item .stars {
-  color: #5c2d32;
+  color: #92A8D1;
   margin-bottom: 10px;
 }
 
@@ -1423,7 +1453,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5c2d32;
+  background-color: #92A8D1;
 }
 
 @media (min-width: 992px) {
@@ -1446,7 +1476,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #5c2d32;
+  color: #92A8D1;
   float: left;
   width: 44px;
   height: 44px;
@@ -1475,7 +1505,7 @@ section {
 }
 
 .contact .info:hover i {
-  background: #5c2d32;
+  background: #92A8D1;
   color: #fff;
 }
 
@@ -1544,7 +1574,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #5c2d32;
+  background: #92A8D1;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1590,7 +1620,7 @@ section {
 #footer h3 {
   font-size: 36px;
   font-weight: 700;
-  color: #5c2d32;
+  color: #92A8D1;
   position: relative;
   padding: 0;
   margin: 0 0 15px 0;
@@ -1623,7 +1653,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #5c2d32;
+  background: #92A8D1;
 }
 
 #footer .copyright {
@@ -1633,3 +1663,18 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+You have no unread notifications
