--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -868,7 +868,7 @@ section {
   display: block;
   font-size: 28px;
   font-weight: 700;
-  color: #ffcf88;
+  color: #4B71B6;
 }
 
 .why-us .box h4 {
