--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #ffc064;
+  background: #202f4a;
   color: #fff;
 }
 
@@ -145,7 +145,7 @@ h6 {
 }
 
 .book-a-table-btn:hover {
-  background: #ffa012;
+  background: #202f4a;
   color: #fff;
 }
 
