--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,29 @@ h6 {
   font-family: "Satisfy", sans-serif;
 }
 
+<style>
+form {width:500px;margin:50px auto;}.search 
+     {          
+       padding:8px 15px; 
+       background: #f0f8ff; 
+       border:2px solid #008080;
+     }.button 
+     {
+       position:relative;
+       left:-4px;          
+       padding:10px 15px; 
+       border:0px solid #008080;          
+       background-color: #6B8E23; 
+       color:#fafafa;
+       font-weight:bold;
+     }.button:hover 
+     {
+       background: #008080;          
+       color:#fafafa;
+     }.button:active {background:#9ACD32;}
+</style>
+
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
