--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,31 @@ h6 {
   white-space: nowrap;
 }
 
+.belum {
+  color: #92a8d1;
+  border-radius: 50px;
+  margin: 0 0 0 20px;
+  padding: 10px 25px;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+
+.signin {
+  background: #92a8d1;
+  color: #fff;
+  border-radius: 50px;
+  margin: 0 0 0 20px;
+  padding: 10px 25px;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+
 .book-a-table-btn {
   background: #92a8d1;
   color: #fff;
@@ -1122,6 +1147,7 @@ section {
 /*--------------------------------------------------------------
 # Book A Table
 --------------------------------------------------------------*/
+
 .book-a-table .php-email-form {
   width: 100%;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -1131,6 +1157,7 @@ section {
 
 .book-a-table .php-email-form .form-group {
   padding-bottom: 8px;
+  text-align: center;
 }
 
 .book-a-table .php-email-form .validate {
@@ -1503,6 +1530,7 @@ section {
 
 .contact .php-email-form .form-group {
   padding-bottom: 8px;
+  text-align: center;
 }
 
 .contact .php-email-form .error-message {
