--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1620,6 +1620,32 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Atas Menu
+--------------------------------------------------------------*/
+#atasmenu {
+  background: #35322d;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  padding: 30px 0;
+}
+
+#atasmenu .logo h1 {
+  font-size: 28px;
+  margin: 0;
+  line-height: 1;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+#atasmenu p {
+  font-size: 15;
+  font-style: italic;
+  padding: 0;
+  margin: 0 0 40px 0;
+}
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
